Responsive (xs): Fix horizontal scroll

--- a/less/style.less
+++ b/less/style.less
@@ -2679,6 +2679,12 @@ Version: 1.0
     .mobile-header-menu {
       width: 70vw;
     }
+
+    .product-categories,
+    .complete-look,
+    footer .container {
+      padding: 0 15px;
+    }
   }
 
   @media only screen  and (max-width: 480px) {
